16332
{noformat}
Welcome to Scala version 2.10.0.r25463-b20110808085525 (Java HotSpot(TM) 64-Bit Server VM, Java 1.6.0_26).

scala> :power
** Power User mode enabled - BEEP BOOP SPIZ **
scala> :paste
// Entering paste mode (ctrl-D to finish)

  def time[T](fn: => T): (T, Double) = {
    val start = System.nanoTime
    (fn, (System.nanoTime - start) / 1.0E9)
  }
^D
// Exiting paste mode, now interpreting.

time: [T](fn: => T)(T, Double)

scala> :wrap time
Set wrapper to 'time'

scala> (1 to 1000000).sum
{noformat}

no error, no result, nothing.  by contrast in 2.9.0.1 the same thing gives me a compile error:

{noformat}
<console>:6: error: type mismatch;
 found   : (java.lang.String, Double)
 required: String
  val $export: String = `time` {
                                                                                     ^
{noformat}

taking the hint and going back to trunk with a changed definition of "time":

{noformat}
Welcome to Scala version 2.10.0.r25463-b20110808085525 (Java HotSpot(TM) 64-Bit Server VM, Java 1.6.0_26).

scala> :paste
// Entering paste mode (ctrl-D to finish)

  def time[T](fn: => T): T = {
    val start = System.nanoTime
    val result = fn
    println((System.nanoTime - start) / 1.0E9)
    result
  }

^D
// Exiting paste mode, now interpreting.

time: [T](fn: => T)T

scala> :power
** Power User mode enabled - BEEP BOOP SPIZ **

scala> :wrap time
Set wrapper to 'time'

scala> time(3)
5.04E-4
4.35E-4
4.96E-4
4.97E-4
6.0E-6
0.001007
res0: Int = 3
{noformat}

now it's running my code over and over again.  in 2.9 it works:

{noformat}
scala> time(3)
3.6E-5
res0: Int = 3
{noformat}
